# tree-sitter-ca65

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  makefile  package.json  tree-sitter-ca65.wasm
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: addressing_modes.test  addressing_modes.txt  ambiguities.test  assignment  comments.test  decimals.txt  hex.txt  identifiers.test  line-continue.test  macro.txt  mnemonics.test  scratch.txt  string.txt
corpus/control-commands/: feature  features  insular  macro.txt
corpus/control-commands/exceptional/: assert.test  condes.test  enum.test  feature.test  features.test  if.test  if.tree-sitter-test  macro.test  proc.test  repeat.test  scope.test  set.test  struct.test  union.test
corpus/expressions/: binary  binary.test  unary  unary.test
corpus/labels/: standard  standard.test  unnamed  unnamed.test
corpus/literals/: binary.test  decimal.test  decimals.txt  hex.test  hex.txt  string.test  string.txt
corpus/pseudo-functions/: addrsize  addrsize.test  blank.test  concat.tree-sitter-test
corpus/statements/: assignment
etc/: macpak.yaml  predefined-constants.yaml  strings.js
meta/: development.md  project layout.md  roadmap.md
misc/: mega-syntax.asm  mega-syntax.html  parse.ts  smb-movements.html  smb-movements.s
queries/: highlights.scm  queries.scm
scripts/: doctor  publish  watch-tests
src/: grammar.json  node-types.json  parser.c
src/components/: control_commands.js  pseudo_functions.js  pseudo_variables.js
src/custom/: utilities.js
(+6 files in other folders)
